--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="build" name="running java class using ant">
-  <target name="build" depends="clean">
+  <target name="compile" depends="clean">
     <mkdir dir="build"/>
     <javac includeantruntime="false" srcdir="src" destdir="build"/>
   </target>
   <target name="clean">
     <delete dir="build"/>
   </target>
+  <target name="runJunittest" depends="compile">
+    <junit printsummary="on">
+        <test name="TestRunner"/>
+                <classpath>
+                <pathelement location="/usr/local/JUNIT/junit-4.10.jar"/>
+                <pathelement location="."/>
+                </classpath>
+    </junit>
+</target>
 </project>
