--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="build" name="running java class using ant">
-  <target name="compile" depends="">
+  <target name="compile">
     <!--<mkdir dir="build"/>-->
     <javac includeantruntime="false" srcdir="src" destdir="build"/>
   </target>
