--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project default="build" name="running java class using ant">
+<project default="runJunittest" name="running java class using ant">
   <target name="compile">
     <!--<mkdir dir="build"/>-->
     <javac includeantruntime="false" srcdir="src" destdir="build"/>
