--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project default="runJunittest" name="running java class using ant">
   <target name="compile">
     <!--<mkdir dir="build"/>-->
-    <javac includeantruntime="false" srcdir="src" destdir="build"/>
+    <javac includeantruntime="false" classpath="src/junit-4.10.jar" srcdir="src" destdir="build"/>
   </target>
   <target name="clean">
     <delete dir="build"/>
