--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
     <junit printsummary="on">
         <test name="./build/TestRunner"/>
             <classpath>
-              <pathelement location="/home/ec2-user/.jenkins/jobs/ServerTest/workspace/build/junit-4.10.jar"/>
+              <pathelement location="junit-4.10.jar"/>
               <pathelement location="."/>
             </classpath>
     </junit>
