--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
   </target>
   <target name="runJunittest" depends="compile">
     <junit printsummary="on">
-        <test name="./build/TestRunner"/>
+        <test name="TestRunner"/>
             <classpath>
               <pathelement location="./build/junit-4.10.jar"/>
             </classpath>
