--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
                 <pathelement location="junit-4.10.jar"/>
                 <pathelement location="."/>
                 </classpath>
+                <formatter type="plain" usefile="false" />
       </junit>
     <!--
      <java dir="./build" jar="junit-4.10.jar" classname="TestRunner" fork="true"/>
