--- a/build.xml
+++ b/build.xml
@@ -9,9 +9,8 @@
   </target>
   <target name="runJunittest" depends="compile">
     <junit printsummary="on">
-        <test name="TestRunner"/>
+        <test name="./build/TestRunner"/>
                 <classpath>
-                <pathelement location="junit-4.10.jar"/>
                 <pathelement location="."/>
                 </classpath>
                 <formatter type="plain" usefile="false" />
