--- a/build.xml
+++ b/build.xml
@@ -9,9 +9,9 @@
   </target>
   <target name="runJunittest" depends="compile">
     <junit printsummary="on">
-        <test name="./build/TestRunner"/>
+        <test name="TestRunner"/>
                 <classpath>
-                <pathelement location="."/>
+                <pathelement location="./build"/>
                 </classpath>
                 <formatter type="plain" usefile="false" />
       </junit>
