--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
                 <classpath>
                 <pathelement location="./build"/>
                 </classpath>
-                <formatter type="plain" usefile="false" />
+                <!--<formatter type="plain" usefile="false" />-->
       </junit>
     <!--
      <java dir="./build" jar="junit-4.10.jar" classname="TestRunner" fork="true"/>
