--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<property name="build_dir" value="build"/>
 <project default="runJunittest" name="running java class using ant">
   <target name="compile">
     <!--<mkdir dir="build"/>-->
@@ -8,9 +9,12 @@
     <delete dir="build"/>
   </target>
   <target name="runJunittest" depends="compile">
+    <java classname = "TestRunner" classpath="${build_dir}"></java>
+  </target>
+  <!--
+  <target name="runJunittest" depends="compile">
     <ant antfile="build/subbuild.xml" inheritrefs="true"/>
   </target>
-    <!--
     <junit printsummary="yes" showoutput="true">
         <test name="Main"/>
                 <classpath>
